update index.html and navbar.js

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
      
         
           <!-- Mega Menu -->
-<div id="mega-menu" class="hidden md:block">
+<div id="mega-menu" class="hidden md:block transition-all duration-300 ease-in-out">
   <div class="flex flex-col md:flex-row gap-6 px-6 py-8 bg-neutral-900 mb-4 rounded-lg text-white">
     <!-- Image Column (50%) -->
     <div class="w-full md:w-1/4">
