fixing the responsive testimonial layout

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   </head>
 
-  <body class="overflow-x-hidden" style=" background-color: #000;
+  <body class="overflow-x-hidden pattern" style=" background-color: #000;
   background-image: radial-gradient(#ffffff17 1px, transparent 1px);
   background-size: 20px 20px;">
 
@@ -279,11 +279,11 @@
       </div>
     </nav>
 
-    <!-- megamenu -->
+
 
  <main class="z-20">
   <!-- Header Section -->
-  <section id="hero-section" class="flex flex-col items-start justify-end h-screen w-full py-32 gap-0 md:gap-10 relative px-10 md:px-80 lg:px-70">
+  <section id="hero-section" class="flex flex-col items-start justify-end h-screen w-full py-32 gap-0 md:gap-10 relative px-10 md:px-40 lg:px-70">
     <!-- Hero Video -->
     <div id="hero-video" class="hero-vid absolute inset-0 z-0">
       <video autoplay loop muted playsinline class="w-full h-[70vh] md:h-full object-cover rounded-b-[50px] md:rounded-b-[100px]">
@@ -295,7 +295,7 @@
 
     <!-- Content Overlay -->
     <div id="hero-content" class="z-10 ">
-   <div class="mt-20 flex flex-col items-start justify-start gap-0 md:gap-10">
+   <div class="mt-20 flex flex-col items-start justify-start gap-0 md:gap-2 lg:gap-10">
 
     
 <h1 class="font-bold text-white text-5xl md:text-4xl lg:text-[3rem] xl:text-[5rem]">
@@ -589,6 +589,48 @@
     </div>
 </section>
 
+  <section>
+    <div class="mt-0 md:mt-10 flex flex-col items-start justify-start gap-0 md:gap-10 w-full max-w-full">
+      <div class="mb-10 px-10 flex flex-col items-start justify-start gap-1 md:gap-5 w-full max-w-full" >  
+        <p class="text-white text-lg md:text-2xl lg:text-[1.5rem] xl:text-[1.5rem]">What Our Client Say</p>
+   <h2 class="font-bold text-white text-5xl md:text-4xl lg:text-[3rem] xl:text-[5rem]"> Tesimonials</h2>
+  
+
+
+  <div class="w-full max-w-full grid grid-cols-1 grid-rows-auto gap-2  md:grid-cols-12 md:gap-4 mt-6 text-white">
+  
+  <!-- div1 -->
+  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-6 md:row-span-2 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out">1</div>
+
+  <!-- div2 -->
+  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-3 md:row-span-2 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out">2</div>
+
+  <!-- div3 -->
+  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-3 md:row-span-1 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out">3</div>
+
+
+  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-3 md:row-span-2 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out">6</div>
+
+  <!-- div5 -->
+  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-3 md:row-span-1 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out">5</div>
+
+   <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-6 md:row-span-1 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out">4</div>
+
+
+
+ 
+
+  
+
+  
+</div>
+
+
+
+
+  </div>
+    </div>
+</section>
 
 
   <!-- Footer -->
