update index.html and output.css

--- a/index.html
+++ b/index.html
@@ -597,24 +597,132 @@
   
 
 
-  <div class="w-full max-w-full grid grid-cols-1 grid-rows-auto gap-2  md:grid-cols-12 md:gap-4 mt-6 text-white">
+  <div class="w-full max-w-full grid grid-cols-1 grid-rows-auto gap-6  md:grid-cols-12 md:gap-4 mt-6 text-white">
   
   <!-- div1 -->
-  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-6 md:row-span-2 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out">1</div>
+  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-6 md:row-span-2 px-4 py-8 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out my-auto">
+
+    <div class="flex flex-row items-center justify-start gap-4 ">
+      <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-daniel.jpg" alt="testimonial" class="w-12 h-12 rounded-full border-2 border-primary-color ">
+      <div>
+        <h2 class="font-semibold text-2xl">Daniel Clifford</h2>
+        <p class="text-gray-300">UI Designer</p>
+      </div>
+    </div>
+
+    <div>
+      <h2 class="mt-3 text-gray-300 text-2xl md:text-3xl">
+        I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.
+      </h2>
+      <p class="mt-2 text-gray-300 text-sm  md:text-md">“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
+    </div>
+
+
+  </div>
 
   <!-- div2 -->
-  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-3 md:row-span-2 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out">2</div>
+  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-3 md:row-span-2 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out my-auto">
+
+     <div class="flex flex-row items-center justify-start gap-4 ">
+      <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-jonathan.jpg" alt="testimonial" class="w-12 h-12 rounded-full border-2 border-primary-color ">
+      <div>
+        <h2 class="font-semibold text-2xl">Jonathan Walters</h2>
+        <p class="text-gray-300">CTO</p>
+      </div>
+    </div>
+
+    <div>
+      <h2 class="mt-3 text-gray-300 text-2xl md:text-3xl">
+        The team was very supportive and kept me motivated
+      </h2>
+      <p class="mt-2 text-gray-300 text-sm  md:text-md">“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ”</p>
+    </div>
+
+
+  </div>
 
   <!-- div3 -->
-  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-3 md:row-span-1 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out">3</div>
+  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-3 md:row-span-1 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out my-auto">
 
 
-  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-3 md:row-span-2 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out">6</div>
+    <div class="flex flex-row items-center justify-start gap-4 ">
+      <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-kira.jpg" alt="testimonial" class="w-12 h-12 rounded-full border-2 border-primary-color ">
+      <div>
+        <h2 class="font-semibold text-2xl">Kira Whittle</h2>
+        <p class="text-gray-300">Software Engineer</p>
+      </div>
+    </div>
 
-  <!-- div5 -->
-  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-3 md:row-span-1 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out">5</div>
+    <div>
+      <h2 class="mt-3 text-gray-300 text-2xl md:text-3xl">
+        The team was very supportive and kept me motivated
+      </h2>
+      <p class="mt-2 text-gray-300 text-sm  md:text-md">“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ”</p>
+    </div>
 
-   <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-6 md:row-span-1 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out">4</div>
+
+  </div>
+
+
+  <!-- div-4 -->
+  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-3 md:row-span-2 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out">
+
+    <div class="flex flex-row items-center justify-start gap-4 ">
+      <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-jeanette.jpg" alt="testimonial" class="w-12 h-12 rounded-full border-2 border-primary-color ">
+      <div>
+        <h2 class="font-semibold text-2xl">Jeanette Harmon</h2>
+        <p class="text-gray-300">Chief Editor</p>
+      </div>
+    </div>
+
+    <div>
+      <h2 class="mt-3 text-gray-300 text-2xl md:text-3xl">
+       An overall wonderful and rewarding experience
+      </h2>
+      <p class="mt-2 text-gray-300 text-sm  md:text-md">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ”</p>
+    </div>
+
+
+
+  </div>
+
+  <!-- div-5 -->
+  <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-3 md:row-span-1 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out my-auto">
+    <div class="flex flex-row items-center justify-start gap-4 ">
+      <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-kira.jpg" alt="testimonial" class="w-12 h-12 rounded-full border-2 border-primary-color ">
+      <div>
+        <h2 class="font-semibold text-2xl">Kira Whittle</h2>
+        <p class="text-gray-300">Software Engineer</p>
+      </div>
+    </div>
+
+    <div>
+      <h2 class="mt-3 text-gray-300 text-2xl md:text-3xl">
+        The team was very supportive and kept me motivated
+      </h2>
+      <p class="mt-2 text-gray-300 text-sm  md:text-md">“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ”</p>
+    </div>
+
+  </div>
+
+  <!-- div-6 -->
+   <div class="bg-white h-full backdrop-blur-lg bg-opacity-10 col-span-1 row-span-1 md:col-span-6 md:row-span-1 px-4 py-6 rounded-lg shadow-lg hover:translate-y-[-5px] transition ease-in-out my-auto">
+    <div class="flex flex-row items-center justify-start gap-4 ">
+      <img src="https://raw.githubusercontent.com/RahulSahOfficial/testimonials_grid_section/5532c958b7d3c9b910a216b198fdd21c73112d84/images/image-patrick.jpg" alt="testimonial" class="w-12 h-12 rounded-full border-2 border-primary-color ">
+      <div>
+        <h2 class="font-semibold text-2xl">Patrick Abrams</h2>
+        <p class="text-gray-300">Software Engineer</p>
+      </div>
+    </div>
+
+    <div>
+      <h2 class="mt-3 text-gray-300 text-2xl md:text-3xl">
+       Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.
+      </h2>
+      <p class="mt-2 text-gray-300 text-sm  md:text-md">“ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. ”</p>
+    </div>
+
+   </div>
 
 
 
