update index.html and output.css

--- a/index.html
+++ b/index.html
@@ -756,32 +756,6 @@
 </section>
 
 
-<!-- cta -->
-  <section class="mt-20 mb-20 relative w-full h-[50vh] md:h-[80vh] overflow-hidden">
-  <!-- Background Video -->
-  <div class="absolute inset-0 z-0">
-    <video autoplay muted loop playsinline class="w-full h-full  object-cover">
-      <source src="./public/img/cta.mp4"  type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-    <!-- Black Overlay -->
-    <!-- <div class="absolute inset-0 bg-black/40"></div> -->
-  </div>
-
-  <!-- Content -->
-  <div class="relative z-10 flex flex-col items-center justify-center h-full text-center px-6 gap-2 md:gap-6">
-    <p class="text-white text-lg md:text-2xl lg:text-[1.5rem] xl:text-[1.5rem]">Ready to Bring Your Ideas to Life?</p>
-
-    <h2 class="font-bold text-white text-2xl md:text-3xl lg:text-[2rem] xl:text-[4rem]">Let’s collaborate to turn your vision into stunning 3D experiences.</h2>
- 
-    <div class="flex flex-col w-full sm:flex-row gap-0 md:gap-6  items-center justify-center">
-      <button class="btn  text-white py-2 px-6 md:px-12 md:py-3 rounded-lg shadow-lg  hover:scale-105 transition   text-center   mt-4 border-2 border-white">Get Started</button>
-      <button class="btn  text-white py-2 px-6 md:px-12 md:py-3 rounded-lg shadow-lg  hover:scale-105 transition   text-center   mt-4 border-2 border-white">View Portfolio</button>
-    </div>
-  </div>
-</section>
-
-
 <!-- clients -->
 
   <section>
@@ -813,6 +787,61 @@
       </div>
     </div>
   </section>
+
+  <!-- cta -->
+  <section class="mt-20 mb-20 relative w-full h-[50vh] md:h-[80vh] overflow-hidden">
+  <!-- Background Video -->
+  <div class="absolute inset-0 z-0">
+    <video autoplay muted loop playsinline class="w-full h-full  object-cover">
+      <source src="./public/img/cta.mp4"  type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+    <!-- Black Overlay -->
+    <!-- <div class="absolute inset-0 bg-black/40"></div> -->
+  </div>
+
+  <!-- Content -->
+  <div class="relative z-10 flex flex-col items-start justify-end h-full px-6 gap-2 md:gap-6 p-10">
+    <p class="text-white text-lg md:text-2xl lg:text-[1.5rem] xl:text-[1.5rem]">Ready to Bring Your Ideas to Life?</p>
+
+    <h2 class="font-bold text-white text-2xl md:text-3xl lg:text-[2rem] xl:text-[4rem]">Let’s collaborate to turn your vision into stunning 3D experiences.</h2>
+ 
+    <div class="flex flex-row w-full gap-4  items-center justify-start">
+      <button class="btn  text-white py-2 px-6 md:px-12 md:py-3 rounded-lg shadow-lg  hover:scale-105 transition   text-center   mt-4 border-2 border-white">Get Started</button>
+      <button class="btn  text-white py-2 px-6 md:px-12 md:py-3 rounded-lg shadow-lg  hover:scale-105 transition   text-center   mt-4 border-2 border-white">View Portfolio</button>
+    </div>
+  </div>
+</section>
+
+
+<!-- contact us -->
+
+
+  <section>
+    <div class="mt-0 md:mt-10 flex flex-col items-start justify-start gap-0 md:gap-10 w-full max-w-full">
+      <div class="mb-10 px-10 flex flex-col items-start justify-start gap-1 md:gap-5 w-full max-w-full" >  
+        <p class="text-white text-lg md:text-2xl lg:text-[1.5rem] xl:text-[1.5rem]">Do you want a quote?</p>
+   <h2 class="font-bold text-white text-5xl md:text-4xl lg:text-[3rem] xl:text-[5rem]"> Contact Us</h2>
+
+
+   <form action="" class="w-full">
+    <label for="name" class="block text-white">Name</label>
+    <input type="text" id="name" name="name" class="w-full mb-4 p-2 rounded" placeholder="Enter your name">
+
+    <label for="email" class="block text-white">Email</label>
+    <input type="email" id="email" name="email" class="w-full mb-4 p-2 rounded" placeholder="Enter your email">
+
+    <label for="message" class="block text-white">Message</label>
+    <textarea id="message" name="message" class="w-full mb-4 p-2 rounded" rows="4" placeholder="Enter your message"></textarea>
+
+    <button class="btn text-white py-2 px-6 md:px-12 md:py-3 rounded-lg shadow-lg  hover:scale-105 transition   text-center mt-4 border-2 border-white">Submit</button>
+   </form>
+
+
+      </div>
+      </div>
+  </section>
+
 
   <!-- Footer -->
 </main>
