update index.html and output.css

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
               Contact Now
             </button>
           <button
-              class="btn  text-white px-6 py-2 rounded-lg shadow-lg bg-primary-color hover:scale-105 transition ">
+              class="btn border-2 text-white px-6 py-2 rounded-lg shadow-lg  hover:scale-105 transition ">
               View Portfolio
             </button>
         </div>
@@ -824,7 +824,9 @@
    <h2 class="font-bold text-white text-5xl md:text-4xl lg:text-[3rem] xl:text-[5rem]"> Contact Us</h2>
 
 
-   <form action="" class="w-full">
+<div class="flex flex-col-reverse md:flex-row gap-5 w-full">
+<div class="md:w-1/2 w-full">
+  <form action="" class="w-full">
     <label for="name" class="block text-white">Name</label>
     <input type="text" id="name" name="name" class="w-full mb-4 p-2 rounded" placeholder="Enter your name">
 
@@ -836,6 +838,13 @@
 
     <button class="btn text-white py-2 px-6 md:px-12 md:py-3 rounded-lg shadow-lg  hover:scale-105 transition   text-center mt-4 border-2 border-white">Submit</button>
    </form>
+</div>
+<div class="md:w-1/2 w-full mx-0 my-0">
+  <img src="./public/img/contact.gif" alt="3d services" class="w-[80%] md:w-[40%] mx-auto">
+</div>
+</div>
+
+   
 
 
       </div>
