update index.html and output.css

--- a/index.html
+++ b/index.html
@@ -667,12 +667,10 @@
 
 
 
-   <div class="w-full max-w-full h-full max-h-full  flex flex-col md:flex-row items-start justify-stretch gap-6  md:grid-cols-12 md:gap-4 mt-6 text-white">
-  
-  
 
 
-    <ul class="w-full md:w-1/6 flex-column space-y space-y-4 text-sm font-medium text-gray-500 dark:text-gray-400 md:me-4 mb-4 md:mb-0">
+<div class="md:flex md:w-full">
+    <ul class="flex-column space-y space-y-4 text-sm font-medium text-gray-500 dark:text-gray-400 md:me-4 mb-4 md:mb-0">
         <li>
             <a href="#" class="inline-flex items-center px-4 py-3 text-white bg-blue-700 rounded-lg active w-full dark:bg-blue-600" aria-current="page">
                 <svg class="w-4 h-4 me-2 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
@@ -712,18 +710,19 @@
             Disabled</a>
         </li>
     </ul>
-    
-    <div class="h-full max-h-full p-6 bg-gray-50 text-medium text-gray-500 dark:text-gray-400 dark:bg-gray-800 rounded-lg w-full">
+    <div class="p-6 bg-gray-50 text-medium text-gray-500 dark:text-gray-400 dark:bg-gray-800 rounded-lg w-full">
         <h3 class="text-lg font-bold text-gray-900 dark:text-white mb-2">Profile Tab</h3>
         <p class="mb-2">This is some placeholder content the Profile tab's associated content, clicking another tab will toggle the visibility of this one for the next.</p>
         <p>The tab JavaScript swaps classes to control the content visibility and styling.</p> 
     </div>
+</div>
 
 
 
 
 
-   </div>
+
+</div>
    </div>
    </section>
 
