--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
 
 <!-- why choose us -->
 
-<!-- Testimonials -->
+<!-- Tabs -->
   <section>
     <div class="mt-0 md:mt-10 flex flex-col items-start justify-start gap-0 md:gap-10 w-full max-w-full">
       <div class="mb-10 px-10 flex flex-col items-start justify-start gap-1 md:gap-5 w-full max-w-full" >  
@@ -670,9 +670,9 @@
 
 
 <div class="md:flex md:w-full mt-10">
-    <ul class="flex-column space-y space-y-4 text-sm font-medium text-gray-500 dark:text-gray-400 md:me-4 mb-4 md:mb-0">
+    <ul class="flex-column space-y space-y-4 text-sm font-medium text-black  md:me-4 mb-4 md:mb-0 w-full md:w-[10%] ">
         <li>
-            <a href="#" class="inline-flex items-center px-4 py-3 text-white bg-blue-700 rounded-lg active w-full dark:bg-blue-600" aria-current="page">
+            <a href="#" class="inline-flex items-center px-4 py-3 text-white bg-black bg-opacity-70 rounded-lg active w-full " aria-current="page">
                 <svg class="w-4 h-4 me-2 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                     <path d="M10 0a10 10 0 1 0 10 10A10.011 10.011 0 0 0 10 0Zm0 5a3 3 0 1 1 0 6 3 3 0 0 1 0-6Zm0 13a8.949 8.949 0 0 1-4.951-1.488A3.987 3.987 0 0 1 9 13h2a3.987 3.987 0 0 1 3.951 3.512A8.949 8.949 0 0 1 10 18Z"/>
                 </svg>
@@ -702,20 +702,17 @@
                 Contact
             </a>
         </li>
-        <li>
-            <a class="inline-flex items-center px-4 py-3 text-gray-400 rounded-lg cursor-not-allowed bg-gray-50 w-full dark:bg-gray-800 dark:text-gray-500">
-                <svg class="w-4 h-4 me-2 text-gray-400 dark:text-gray-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                    <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z"/>
-                </svg>
-            Disabled</a>
-        </li>
+        
     </ul>
-    <div class="p-6 bg-gray-50 text-medium text-gray-500 dark:text-gray-400 dark:bg-gray-800 rounded-lg w-full">
+    <div class="p-6 bg-gray-50 text-medium text-gray-500  rounded-lg w-full">
         <h3 class="text-lg font-bold text-gray-900 dark:text-white mb-2">Profile Tab</h3>
         <p class="mb-2">This is some placeholder content the Profile tab's associated content, clicking another tab will toggle the visibility of this one for the next.</p>
         <p>The tab JavaScript swaps classes to control the content visibility and styling.</p> 
     </div>
 </div>
+
+
+
 
 
 
@@ -976,7 +973,7 @@
 
   <!-- Footer -->
 
-    <footer class="w-full py-[3rem]">
+    <footer class="w-full py-[3rem] ">
     <div class="mt-0 md:mt-10 flex flex-col items-start justify-start gap-0 md:gap-10 w-full max-w-full">
 
       <div class="mb-10 px-10 flex flex-col md:flex-row items-start justify-start gap-6 md:gap-5 w-full max-w-full" >  
@@ -1133,12 +1130,15 @@
       </div>
    
 
-      <div class="flex flex-row items-center justify-center gap-2 w-full text-white">
+      <div class="flex flex-row items-center justify-center gap-2 w-full text-white mt-6 md:mt-0">
 <p>Copyright &copy; 2025 NBY IT Solution</p>
       </div>
 
       </div>
   </footer>
+
+
+
 
 
 </main>
