update index.html, output.css and single-service.html

--- a/single-service.html
+++ b/single-service.html
@@ -529,6 +529,153 @@
 </section>
 
 
+  <section>
+    <div class="mt-0 md:mt-10 flex flex-col items-start justify-start gap-0 md:gap-10 w-full max-w-full">
+      <div class="mb-10 px-10 flex flex-col items-start justify-start gap-1 md:gap-5 w-full max-w-full text-white text-justify" >  
+        <p class="text-xl ">There are many advantages to using 3D modeling services in the product manufacturing business. 3D modeling in the product modeling business allows you to create high-quality product prototypes. Using 3D product modeling, you can create realistic images and videos that enhance your marketing and boost your sales. 3D product modeling reduces production time. You can virtually create and test a product instead of physical prototyping and testing. It saved your money. So, the benefits of using 3D modeling in product manufacturing businesses are plentiful and very effective.</p>
+        </div>
+        </div>
+        </div>
+        </section>
+
+
+<!-- why choose us -->
+
+  <section>
+    <div class="mt-0 md:mt-10 flex flex-col items-start justify-start gap-0 md:gap-10 w-full max-w-full">
+      <div class="mb-10 px-10 flex flex-col items-start justify-start gap-1 md:gap-5 w-full max-w-full" >  
+        <p class="text-white text-lg md:text-2xl lg:text-[1.5rem] xl:text-[1.5rem]">What Makes Us Different</p>
+   <h2 class="font-bold text-white text-5xl md:text-4xl lg:text-[3rem] xl:text-[5rem]"> Why Choose Us </h2>
+
+
+<div class="md:flex md:w-full mt-10">
+  <!-- Tab Navigation -->
+  <ul class="flex flex-col space-y-4 text-sm font-medium text-black md:me-4 mb-4 md:mb-0 w-full md:w-[10%]">
+    <li>
+      <button data-tab="modeling" class="inline-flex items-center px-4 py-3 text-white bg-black bg-opacity-70 rounded-lg active w-full" type="button">
+        <svg class="w-4 h-4 me-2 text-white" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+          <path d="M10 0a10 10 0 1 0 10 10A10.011 10.011 0 0 0 10 0Zm0 5a3 3 0 1 1 0 6 3 3 0 0 1 0-6Zm0 13a8.949 8.949 0 0 1-4.951-1.488A3.987 3.987 0 0 1 9 13h2a3.987 3.987 0 0 1 3.951 3.512A8.949 8.949 0 0 1 10 18Z"/>
+        </svg>
+        3D Modeling
+      </button>
+    </li>
+    <li>
+      <button data-tab="rendering" class="inline-flex items-center px-4 py-3 rounded-lg hover:text-gray-900 bg-gray-50 hover:bg-gray-100 w-full dark:bg-gray-800 dark:hover:bg-gray-700 dark:hover:text-white" type="button">
+        <svg class="w-4 h-4 me-2 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+          <path d="M6.143 0H1.857A1.857 1.857 0 0 0 0 1.857v4.286C0 7.169.831 8 1.857 8h4.286A1.857 1.857 0 0 0 8 6.143V1.857A1.857 1.857 0 0 0 6.143 0Zm10 0h-4.286A1.857 1.857 0 0 0 10 1.857v4.286C10 7.169 10.831 8 11.857 8h4.286A1.857 1.857 0 0 0 18 6.143V1.857A1.857 1.857 0 0 0 16.143 0Zm-10 10H1.857A1.857 1.857 0 0 0 0 11.857v4.286C0 17.169.831 18 1.857 18h4.286A1.857 1.857 0 0 0 8 16.143v-4.286A1.857 1.857 0 0 0 6.143 10Zm10 0h-4.286A1.857 1.857 0 0 0 10 11.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 18 16.143v-4.286A1.857 1.857 0 0 0 16.143 10Z"/>
+        </svg>
+       3D Rendering
+      </button>
+    </li>
+    <li>
+      <button data-tab="animation" class="inline-flex items-center px-4 py-3 rounded-lg hover:text-gray-900 bg-gray-50 hover:bg-gray-100 w-full dark:bg-gray-800 dark:hover:bg-gray-700 dark:hover:text-white" type="button">
+        <svg class="w-4 h-4 me-2 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+          <path d="M18 7.5h-.423l-.452-1.09.3-.3a1.5 1.5 0 0 0 0-2.121L16.01 2.575a1.5 1.5 0 0 0-2.121 0l-.3.3-1.089-.452V2A1.5 1.5 0 0 0 11 .5H9A1.5 1.5 0 0 0 7.5 2v.423l-1.09.452-.3-.3a1.5 1.5 0 0 0-2.121 0L2.576 3.99a1.5 1.5 0 0 0 0 2.121l.3.3L2.423 7.5H2A1.5 1.5 0 0 0 .5 9v2A1.5 1.5 0 0 0 2 12.5h.423l.452 1.09-.3.3a1.5 1.5 0 0 0 0 2.121l1.415 1.413a1.5 1.5 0 0 0 2.121 0l.3-.3 1.09.452V18A1.5 1.5 0 0 0 9 19.5h2a1.5 1.5 0 0 0 1.5-1.5v-.423l1.09-.452.3.3a1.5 1.5 0 0 0 2.121 0l1.415-1.414a1.5 1.5 0 0 0 0-2.121l-.3-.3.452-1.09H18a1.5 1.5 0 0 0 1.5-1.5V9A1.5 1.5 0 0 0 18 7.5Zm-8 6a3.5 3.5 0 1 1 0-7 3.5 3.5 0 0 1 0 7Z"/>
+        </svg>
+       3D Animation
+      </button>
+    </li>
+    <li>
+      <button data-tab="arvr" class="inline-flex items-center px-4 py-3 rounded-lg hover:text-gray-900 bg-gray-50 hover:bg-gray-100 w-full dark:bg-gray-800 dark:hover:bg-gray-700 dark:hover:text-white" type="button">
+        <svg class="w-4 h-4 me-2 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+          <path d="M7.824 5.937a1 1 0 0 0 .726-.312 2.042 2.042 0 0 1 2.835-.065 1 1 0 0 0 1.388-1.441 3.994 3.994 0 0 0-5.674.13 1 1 0 0 0 .725 1.688Z"/>
+          <path d="M17 7A7 7 0 1 0 3 7a3 3 0 0 0-3 3v2a3 3 0 0 0 3 3h1a1 1 0 0 0 1-1V7a5 5 0 1 1 10 0v7.083A2.92 2.92 0 0 1 12.083 17H12a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v1a2 2 0 0 0 2 2h1a1.993 1.993 0 0 0 1.722-1h.361a4.92 4.92 0 0 0 4.824-4H17a3 3 0 0 0 3-3v-2a3 3 0 0 0-3-3Z"/>
+        </svg>
+       AR/VR Model Creation
+      </button>
+    </li>
+    <li>
+      <button data-tab="video" class="inline-flex items-center px-4 py-3 rounded-lg hover:text-gray-900 bg-gray-50 hover:bg-gray-100 w-full dark:bg-gray-800 dark:hover:bg-gray-700 dark:hover:text-white" type="button">
+        <svg class="w-4 h-4 me-2 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+          <path d="M7.824 5.937a1 1 0 0 0 .726-.312 2.042 2.042 0 0 1 2.835-.065 1 1 0 0 0 1.388-1.441 3.994 3.994 0 0 0-5.674.13 1 1 0 0 0 .725 1.688Z"/>
+          <path d="M17 7A7 7 0 1 0 3 7a3 3 0 0 0-3 3v2a3 3 0 0 0 3 3h1a1 1 0 0 0 1-1V7a5 5 0 1 1 10 0v7.083A2.92 2.92 0 0 1 12.083 17H12a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v1a2 2 0 0 0 2 2h1a1.993 1.993 0 0 0 1.722-1h.361a4.92 4.92 0 0 0 4.824-4H17a3 3 0 0 0 3-3v-2a3 3 0 0 0-3-3Z"/>
+        </svg>
+      Video Production
+      </button>
+    </li>
+  </ul>
+
+  <!-- Tab Content -->
+  <div id="tab-content" class="p-6 bg-white  backdrop-blur-lg bg-opacity-10 rounded-lg w-full">
+  
+    <div id="modeling" class="tab-pane active">
+      <div class="flex flex-col-reverse md:flex-row items-start gap-10">
+        <div class="md:w-1/2 w-full">
+    <h3 class="text-[35px] font-bold text-white mb-2">3D Modeling</h3>
+      <p class="text-white">We create detailed product, architectural, and industrial 3D models from CAD files or concepts. We have a highly certified team of drafters, engineer Modelers, and architects at NBY IT who can provide you with excellent 3D modeling services and rendering services for any project and Outsource the best 3d Modeling Services.</p>
+        </div>
+        <div class="md:w-1/2 w-full">
+   <img src="./public/img/3d animation.gif" alt="" class="w-[80%] md:w-[20%] mx-auto">
+        </div>
+
+      </div>
+  
+    </div>
+
+  
+    <div id="rendering" class="tab-pane hidden">
+      <div class="flex flex-col-reverse md:flex-row items-start gap-10">
+        <div class="md:w-1/2 w-full">
+    <h3 class="text-[35px] font-bold text-white mb-2">3D Rendering</h3>
+      <p class="text-white">We provide high-quality 3D rendering services for products, architecture, and industrial visualization. Our team of experienced drafters, engineers, and architects at NBY IT are highly skilled in rendering services and can provide you with photorealistic images from your 3D models.</p>
+        </div>
+        <div class="md:w-1/2 w-full">
+   <img src="./public/img/3d visula.gif" alt="" class="w-[80%] md:w-[20%] mx-auto">
+        </div>
+
+      </div>
+    </div>
+
+
+    <div id="animation" class="tab-pane hidden">
+     <div class="flex flex-col-reverse md:flex-row items-start gap-10">
+        <div class="md:w-1/2 w-full">
+    <h3 class="text-[35px] font-bold text-white mb-2">3D Animation</h3>
+      <p class="text-white">We create 3D animations for products, architecture, and industrial visualization. Our team of experienced drafters, engineers, and architects at NBY IT are highly skilled in 3D animation services and can provide you with photorealistic animations from your 3D models.</p>
+        </div>
+        <div class="md:w-1/2 w-full">
+   <img src="./public/img/3d furniture.gif" alt="" class="w-[80%] md:w-[20%] mx-auto">
+        </div>
+
+      </div>
+    </div>
+
+
+    <div id="arvr" class="tab-pane hidden">
+     <div class="flex flex-col-reverse md:flex-row items-start gap-10">
+        <div class="md:w-1/2 w-full">
+    <h3 class="text-[35px] font-bold text-white mb-2">AR/VR Model Creation</h3>
+      <p class="text-white">We offer 3D model creation services for Augmented Reality (AR) and Virtual Reality (VR) applications. Our team of experienced drafters, engineers, and architects at NBY IT are highly skilled in creating 3D models for AR and VR applications and can provide you with high-quality models that meet your requirements.</p>
+        </div>
+        <div class="md:w-1/2 w-full">
+   <img src="./public/img/3drender.gif" alt="" class="w-[80%] md:w-[20%] mx-auto">
+        </div>
+
+      </div>
+    </div>
+
+    <div id="video" class="tab-pane hidden">
+     <div class="flex flex-col-reverse md:flex-row items-start gap-10">
+        <div class="md:w-1/2 w-full">
+    <h3 class="text-[35px] font-bold text-white mb-2">Video Production</h3>
+      <p class="text-white">We provide video production services for products, architecture, and industrial visualization. Our team of experienced videographers, editors, and animators at NBY IT are highly skilled in video production services and can provide you with high-quality videos from your concepts.</p>
+        </div>
+        <div class="md:w-1/2 w-full">
+   <img src="./public/img/3dservice.gif" alt="" class="w-[80%] md:w-[20%] mx-auto">
+        </div>
+
+      </div>
+    </div>
+
+
+  </div>
+</div>
+
+
+
+</div>
+   </div>
+   </section>
 
 
 <!-- contact us -->
